feat(index.html): add detailed description about fast forward
For now we have no time for create ul thanks to the feature is
more important then the right solution.

We have to fix this in the follow-up patches. Here you can find
the open Issue: https://github.com/golya/rebase_test/issues/1

Signed-off-by: Ádám Gólya <adam.golya@lab.coop>

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,15 @@
 </head>
 <body>
   <h1>Fast forward</h1>
-  <p>Linear history</p>
+  <pre>
+    - good for small and big teams
+    - linear history
+    - not good for junior developer
+    - dangerous to use without comprehensive ci system
+    - branch information is lost
+    - hard to review and change without force push or revert
+    - hard to do it with non senior developers
+    - feature switch
+  </pre>
 </body>
 </html>
